# PDAM

./: .gitignore  DESIGN_MAP.md  Makefile  README.md  REAL_FRAMEWORK_PLAN.md  pyproject.toml  requirements-real.txt  requirements.txt  run_demo.py
pdam/: __init__.py  broker.py  cli.py  embedding.py  evaluator.py  experiments.py  llm.py  logging_.py  orchestrator.py  planner.py  policy.py  retriever.py  scenario.py  schema.py  utility.py
pdam/attacks/: __init__.py  adaptive.py  generator.py
pdam/memory/: __init__.py  base.py  kv.py  real_langchain.py  real_llamaindex.py  store.py  summary.py  vector.py
pdam/tools/: __init__.py  sandbox.py
results/deterministic/: by_attack_defense.csv  by_defense.csv  runs.json
results/llm/: RESULTS.md  combined_by_model_attack_defense.csv  combined_by_model_defense.csv
results/llm/gemma-2-27b-it/: llm_by_attack_defense.csv  llm_by_defense.csv  llm_runs.json
results/llm/meta-llama-3.1-8b-instruct/: llm_by_attack_defense.csv  (+2 more)
results/real_framework/: ENV.json  FINDINGS.md  backend_by_attack.csv  backend_matrix.csv  cluster_bootstrap.csv  cost.csv  cross_user.csv  dormancy.csv  phase_c2_runs.csv  phase_c2_summary.csv  phase_c_by_difficulty.csv  phase_c_runs.csv  pip_freeze.txt
results/robustness/: attribution_noise.csv  funnel.csv  leave_one_out.csv  misapproval.csv  non_oracle_provenance.csv  oracle_attack.csv  safety_utility_pareto.csv
scripts/: combine_llm_results.py  consistency_check.py  run_cost.py  run_dormancy.py  run_llm_eval.sh  run_phase_c.py  run_phase_c2.py  run_real_framework.py
tests/: test_pdam.py
(+6 files in other folders)
